practice/ingress/terminal-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1

metadata:
  name: terminal-ingress
  namespace: terminal-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: terminal-svc
                port:
                  number: 83
